Modified Private Chat to display drawings on both sides of the screen (depending on who sent the drawing). Modified the design of the login layout. Next steps: Change primary accent colour to bright green instead of eden green

--- a/app/src/main/res/drawable/button_eden.xml
+++ b/app/src/main/res/drawable/button_eden.xml
@@ -2,20 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:state_selected="true">
-        <shape>
-            <solid
-                android:color="@color/medium_grey" />
-            <corners
-                android:radius="5dp"/>
-        </shape>
-    </item>
-
-    <item
         android:state_pressed="true">
         <shape>
             <solid
-                android:color="@color/medium_grey" />
+                android:color="@color/dark_grey" />
             <corners
                 android:radius="5dp"/>
         </shape>
@@ -25,9 +15,6 @@
         <shape>
             <solid
                 android:color="@color/eden_green" />
-            <stroke
-                android:color="@color/eden_green"
-                android:width="0.5dp"/>
             <corners
                 android:radius="5dp"/>
         </shape>
