--- a/app/src/main/res/drawable-hdpi/border_grey.xml
+++ b/app/src/main/res/drawable-hdpi/border_grey.xml
@@ -18,6 +18,9 @@
             <solid
                 android:color="@color/white"/>
 
+            <padding android:left="2dp" android:top="2dp" android:right="2dp"
+                android:bottom="2dp" />
+
         </shape>
 
 
