--- a/app/src/main/res/layout/snippet_drawinglist_rowview_.xml
+++ b/app/src/main/res/layout/snippet_drawinglist_rowview_.xml
@@ -2,36 +2,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/relLayout"
     android:padding="10dp"
-    android:paddingRight="100dp"
-    android:paddingEnd="100dp"
     >
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/border_grey"
-        android:padding="2dp"
-        android:id="@+id/relLayout1"
-        >
+        android:id="@+id/relLayout1">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/drawing"
             android:src="@drawable/ic_question_mark"
             android:adjustViewBounds="true"
+            android:background="@drawable/border_grey"
             />
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/timestamp"
-        android:layout_below="@id/relLayout1"
-        android:textColor="@color/grey"
-        android:textSize="16sp"
-        android:text="00-00-00"
-        />
+        android:id="@+id/relLayout2"
+        android:layout_below="@id/relLayout1">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/timestamp"
+            android:textColor="@color/grey"
+            android:textSize="16sp"
+            android:text="00-00-00"
+            />
+    </RelativeLayout>
 
 </RelativeLayout>
