--- a/app/src/main/res/drawable/button_rounded_rectangle_white.xml
+++ b/app/src/main/res/drawable/button_rounded_rectangle_white.xml
@@ -7,7 +7,7 @@
             <solid
                 android:color="@color/grey" />
             <stroke
-                android:color="@color/eden_green"
+                android:color="@color/primary_green"
                 android:width="2dp"/>
             <corners
                 android:radius="5dp"/>
@@ -19,7 +19,7 @@
             <solid
                 android:color="@color/white" />
             <stroke
-                android:color="@color/eden_green"
+                android:color="@color/primary_green"
                 android:width="2dp"/>
             <corners
                 android:radius="5dp"/>
