--- a/app/src/main/res/layout/dialog_brush_settings.xml
+++ b/app/src/main/res/layout/dialog_brush_settings.xml
@@ -43,8 +43,8 @@
                 app:bsb_bubble_text_color="@android:color/white"
                 app:bsb_max="150"
                 app:bsb_min="1"
-                app:bsb_track_color="@color/eden_green"
-                app:bsb_second_track_color="@color/eden_green"
+                app:bsb_track_color="@color/primary_green"
+                app:bsb_second_track_color="@color/primary_green"
                 app:bsb_section_count="1"
                 app:bsb_show_progress_in_float="false"
                 app:bsb_show_section_mark="false"
@@ -67,7 +67,7 @@
                 android:layout_height="45dp"
                 android:layout_weight="1"
                 android:textSize="18sp"
-                android:textColor="@color/eden_green"
+                android:textColor="@color/primary_green"
                 android:text="@string/string_cancel"
                 android:textStyle="bold"
                 android:gravity="center"
