--- a/app/src/main/res/drawable/button_eden.xml
+++ b/app/src/main/res/drawable/button_eden.xml
@@ -14,7 +14,7 @@
     <item>
         <shape>
             <solid
-                android:color="@color/eden_green" />
+                android:color="@color/primary_green" />
             <corners
                 android:radius="5dp"/>
         </shape>
