--- a/app/src/main/res/drawable/button_rectangle_eden.xml
+++ b/app/src/main/res/drawable/button_rectangle_eden.xml
@@ -12,7 +12,7 @@
     <item>
         <shape>
             <solid
-                android:color="@color/eden_green" />
+                android:color="@color/primary_green" />
         </shape>
     </item>
 
