--- a/app/src/main/res/drawable/button_rounded_rectangle_eden.xml
+++ b/app/src/main/res/drawable/button_rounded_rectangle_eden.xml
@@ -24,9 +24,9 @@
     <item>
         <shape>
             <solid
-                android:color="@color/eden_green" />
+                android:color="@color/primary_green" />
             <stroke
-                android:color="@color/eden_green"
+                android:color="@color/primary_green"
                 android:width="0.5dp"/>
             <corners
                 android:radius="5dp"/>
