--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,56 +3,64 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_green"
     >
 
-    <LinearLayout
+
+    <include layout="@layout/bg_sketchbook_and_pens"/>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="20dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        >
+        android:layout_height="wrap_content">
 
-        <!--freehand logo-->
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_logo_with_name"
-            android:layout_gravity="center_horizontal"
-            android:adjustViewBounds="true"
-            android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginEnd="40dp"
-            />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <!--email-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:paddingRight="10dp"
-            android:paddingEnd="10dp"
-            android:background="@drawable/bg_rectangle_white_rounded"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
             >
 
+            <!--freehand logo-->
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_person_eden"
-                android:adjustViewBounds="true"
-                android:padding="5dp"
-                />
-
-            <!--input email-->
-            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:focusableInTouchMode="true">
+                android:src="@drawable/ic_logo_with_name_white"
+                android:layout_gravity="center_horizontal"
+                android:adjustViewBounds="true"
+                android:layout_marginLeft="40dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginBottom="-20dp"
+                />
+
+            <!--email-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:paddingRight="10dp"
+                android:paddingEnd="10dp"
+                android:background="@drawable/bg_rectangle_white_rounded"
+                android:descendantFocusability="beforeDescendants"
+                android:focusableInTouchMode="true"
+                >
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_profile_green"
+                    android:adjustViewBounds="true"
+                    android:padding="5dp"
+                    />
+
+                <!--input email-->
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -60,95 +68,113 @@
                     android:hint="@string/string_email"
                     android:id="@+id/input_email"
                     android:textSize="18sp"/>
-            </android.support.design.widget.TextInputLayout>
 
-        </LinearLayout>
+            </LinearLayout>
 
 
-        <!--password-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:paddingRight="10dp"
-            android:paddingEnd="10dp"
-            android:background="@drawable/bg_rectangle_white_rounded">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_lock_eden"
-                android:adjustViewBounds="true"
-                android:padding="3dp"
-                />
-
-            <!--input password-->
-            <android.support.design.widget.TextInputLayout
+            <!--password-->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:paddingRight="10dp"
+                android:paddingEnd="10dp"
+                android:background="@drawable/bg_rectangle_white_rounded"
+                android:descendantFocusability="beforeDescendants"
                 android:focusableInTouchMode="true">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_lock_green"
+                    android:adjustViewBounds="true"
+                    android:padding="3dp"
+                    />
+
+                <!--input password-->
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:hint="@string/string_password"
                     android:id="@+id/input_password"
-                    android:textSize="18sp"/>
-            </android.support.design.widget.TextInputLayout>
+                    android:textSize="18sp"
+                    />
+
+            </LinearLayout>
+
+            <!--login button-->
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="18dp"
+                android:text="@string/string_login"
+                android:id="@+id/btn_login"
+                android:padding="5dp"
+                android:background="@drawable/button_eden"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                />
+
+            <!--create an account-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="25dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/string_no_account_yet"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:textColor="@color/dark_grey"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/string_signup"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:id="@+id/link_signup"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
-        <!--login button-->
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="18dp"
-            android:text="@string/string_login"
-            android:id="@+id/btn_login"
-            android:padding="5dp"
-            android:background="@drawable/button_eden"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            />
+        <ProgressBar
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:id="@+id/progressBar"
+            android:layout_centerInParent="true"/>
 
-        <!--create an account-->
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            android:text="@string/string_create_an_account"
+            android:text=""
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:layout_alignBottom="@+id/progressBar"
+            android:layout_alignRight="@+id/progressBar"
+            android:layout_alignEnd="@+id/progressBar"
+            android:layout_alignLeft="@+id/progressBar"
+            android:layout_alignStart="@+id/progressBar"
+            android:id="@+id/pleaseWait"
             android:gravity="center"
-            android:textSize="16sp"
-            android:id="@+id/link_signup"
-            android:textColor="@color/dark_grey"
             />
+    </RelativeLayout>
 
-    </LinearLayout>
-
-    <ProgressBar
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/progressBar"
-        android:layout_centerInParent="true"/>
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:layout_alignBottom="@+id/progressBar"
-        android:layout_alignRight="@+id/progressBar"
-        android:layout_alignEnd="@+id/progressBar"
-        android:layout_alignLeft="@+id/progressBar"
-        android:layout_alignStart="@+id/progressBar"
-        android:id="@+id/pleaseWait"
-        android:gravity="center"
-        />
-
+    </ScrollView>
 
 </RelativeLayout>
