--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,14 +26,10 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_logo_with_name_white"
+                android:src="@drawable/logo_with_name"
                 android:layout_gravity="center_horizontal"
                 android:adjustViewBounds="true"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginEnd="40dp"
-                android:layout_marginBottom="-20dp"
+                android:layout_margin="60dp"
                 />
 
             <LinearLayout
