--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,14 +28,10 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_logo_with_name_white"
+                android:src="@drawable/logo_with_name"
                 android:layout_gravity="center_horizontal"
                 android:adjustViewBounds="true"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginEnd="40dp"
-                android:layout_marginBottom="-20dp"
+                android:layout_margin="60dp"
                 />
 
             <!--email-->
@@ -55,7 +51,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_profile_green"
+                    android:src="@drawable/ic_profile_darkgrey"
                     android:adjustViewBounds="true"
                     android:padding="5dp"
                     />
@@ -88,7 +84,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_lock_green"
+                    android:src="@drawable/ic_lock_darkgrey"
                     android:adjustViewBounds="true"
                     android:padding="3dp"
                     />
@@ -134,7 +130,7 @@
                     android:text="@string/string_no_account_yet"
                     android:gravity="center"
                     android:textSize="16sp"
-                    android:textColor="@color/dark_grey"
+                    android:textColor="@color/white"
                     />
 
                 <TextView
@@ -144,7 +140,7 @@
                     android:gravity="center"
                     android:textSize="16sp"
                     android:id="@+id/link_signup"
-                    android:textColor="@color/white"
+                    android:textColor="@color/primary_green"
                     android:textStyle="bold"
                     />
 
