--- a/app/src/main/res/layout/bg_sketchbook_and_pens.xml
+++ b/app/src/main/res/layout/bg_sketchbook_and_pens.xml
@@ -14,12 +14,11 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#88ffffff">
+        android:background="#bb2a2c2c">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gradient_green">
+            android:layout_height="match_parent">
 
         </RelativeLayout>
 
