--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -44,6 +44,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_margin="10dp"
                     android:id="@+id/btn_add"
+                    android:background="@drawable/button_circle_grey"
                     />
 
                 <!--settings button-->
@@ -55,6 +56,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_margin="10dp"
                     android:id="@+id/btn_settings"
+                    android:background="@drawable/button_circle_grey"
                     />
 
             </RelativeLayout>
