--- a/app/src/main/res/layout/activity_accountsettings.xml
+++ b/app/src/main/res/layout/activity_accountsettings.xml
@@ -24,8 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/relLayout3"
-            android:layout_below="@+id/relLayout2"
-            android:layout_marginBottom="50dp">
+            android:layout_below="@+id/relLayout2">
 
             <include layout="@layout/layout_center_accountsettings"/>
 
