--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,9 +77,7 @@
                 android:layout_marginBottom="8dp"
                 android:paddingRight="10dp"
                 android:paddingEnd="10dp"
-                android:background="@drawable/bg_rectangle_white_rounded"
-                android:descendantFocusability="beforeDescendants"
-                android:focusableInTouchMode="true">
+                android:background="@drawable/bg_rectangle_white_rounded">
 
                 <ImageView
                     android:layout_width="wrap_content"
