--- a/app/src/main/res/layout/layout_center_accountsettings.xml
+++ b/app/src/main/res/layout/layout_center_accountsettings.xml
@@ -8,27 +8,16 @@
     <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="20dp"
+        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
+        android:paddingRight="20dp"
+        android:paddingEnd="20dp"
         android:background="@color/white">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textSettings"
-            android:text="Account Settings"
-            android:textSize="35dp"
-            android:textColor="@color/black"
-            android:background="@drawable/border_bottom_grey"
-            />
-
 
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/textSettings"
             android:id="@+id/lvAccountSettings">
-
-
 
         </ListView>
 
