--- a/app/src/main/res/layout/snippet_top_nexttoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_nexttoolbar.xml
@@ -9,47 +9,38 @@
         android:background="@drawable/grey_border_bottom_white"
         >
 
-        <android.support.v7.widget.Toolbar
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/profileToolbar">
+            android:layout_height="match_parent"
+            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/ivBackArrow"
-                    android:src="@drawable/ic_backarrow"
-                    />
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/string_upload"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="15dp"
-                    android:textSize="20sp"
-                    android:textColor="@color/link_blue"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/tvShare"
-                    />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_centerVertical="true"
+                android:id="@+id/ivBackArrow"
+                android:src="@drawable/ic_backarrow"
+                />
 
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/string_upload"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15dp"
+                android:textSize="20sp"
+                android:textColor="@color/link_blue"
+                android:layout_centerVertical="true"
+                android:id="@+id/tvShare"
+                />
 
-
-            </RelativeLayout>
-
-
-
-        </android.support.v7.widget.Toolbar>
-
+        </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
 
